Fix static link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,11 @@ endif()
 
 if (vcdiff_build_exec)
   add_executable (vcdiff "src/vcdiff_main.cc")
+if(NOT APPLE)
   target_link_libraries (vcdiff vcddec vcdenc gflags -static)
+else()
+  target_link_libraries (vcdiff vcddec vcdenc gflags)
+endif()
   install (TARGETS vcdiff DESTINATION bin)
   install (FILES man/vcdiff.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
 endif ()
