--- a/vcdiff.nuspec
+++ b/vcdiff.nuspec
@@ -19,10 +19,10 @@
     <file src="build\Darwin\vcdiff" target="build/Darwin/vcdiff" />
     <file src="build\Windows\64\vcdiff.exe" target="build/Windows/vcdiff.exe" />
     <file src="build\Linux\vcdiff" target="build/Linux/vcdiff" />
-    <file src="build_android\Android\x86\vcdiff" target="build/Android/x86/vcdiff" />
-    <file src="build_android\Android\x86_64\vcdiff" target="build/Android/x86_64/vcdiff" />
-    <file src="build_android\Android\armeabi-v7a\vcdiff" target="build/Android/armeabi-v7a/vcdiff" />
-    <file src="build_android\Android\arm64-v8a\vcdiff" target="build/Android/arm64-v8a/vcdiff" />
+    <file src="build\Andoird\x86\vcdiff" target="build/Android/x86/vcdiff" />
+    <file src="build\Andoird\x86_64\vcdiff" target="build/Android/x86_64/vcdiff" />
+    <file src="build\Andoird\armeabi-v7a\vcdiff" target="build/Android/armeabi-v7a/vcdiff" />
+    <file src="build\Andoird\arm64-v8a\vcdiff" target="build/Android/arm64-v8a/vcdiff" />
     <file src="vcdiff.native.targets" target="build/vcdiff.native.targets" />
   </files>
 </package>
