Add 7z for the Nuget step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,8 @@ jobs:
   pool:
     vmImage: xcode9-macos10.13
   steps:
+    - script: |
+      brew install p7zip
     - task: DownloadBuildArtifacts@0
       displayName: download artifacts
       inputs:
