--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -111,4 +111,9 @@ jobs:
         command: custom
         arguments: pack vcdiff.nuspec
         packDestination: '$(Build.ArtifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
+      displayName: upload artifacts
+      inputs:
+        artifactName: vcdiff-nuget
+        pathtoPublish: $(Build.ArtifactStagingDirectory)/vcdiff.native.0.8.4.nupkg
 
