--- a/vcdiff.native.targets
+++ b/vcdiff.native.targets
@@ -1,11 +1,11 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <XDeltaBundleBinaries Condition=" '$(XDeltaBundleBinaries)' == '' ">False</XDeltaBundleBinaries>
+    <VCDiffBundleBinaries Condition=" '$(VCDiffBundleBinaries)' == '' ">False</VCDiffBundleBinaries>
   </PropertyGroup>
   <ItemGroup>
-    <_XDeltaNativeBinaries Include="$(MSBuildThisFileDirectory)**\vcdiff" />
-    <_XDeltaNativeBinaries Include="$(MSBuildThisFileDirectory)**\vcdiff.exe" />
-    <None Include="@(_XDeltaNativeBinaries)" Condition=" '$(XDeltaBundleBinaries)' == 'True' ">
+    <_VCDiffNativeBinaries Include="$(MSBuildThisFileDirectory)**\vcdiff" />
+    <_VCDiffNativeBinaries Include="$(MSBuildThisFileDirectory)**\vcdiff.exe" />
+    <None Include="@(_VCDiffNativeBinaries)" Condition=" '$(VCDiffBundleBinaries)' == 'True' ">
       <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
